[package]
name = "test2"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
url = "2.5.7"

