[package]
name = "backpackrust"
version = "0.1.0"
edition = "2024" # 按照你的要求使用 2024 edition

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
ed25519-dalek = { version = "2.1" } # 用于 Ed25519 签名
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
http = "1.1" # reqwest 需要