[package]
name = "bp_maker_brush"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
time = { version = "0.3", features = ["macros", "formatting"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures = "0.3"
anyhow = "1"
